// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`add instruction compiler > emits F32_ADD for float32 operands 1`] = `
{
  "byteCode": [
    146,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "float",
    },
  ],
}
`;

exports[`add instruction compiler > emits F64_ADD for float64 operands 1`] = `
{
  "byteCode": [
    160,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "float64",
    },
  ],
}
`;

exports[`add instruction compiler > emits I32_ADD for integer operands 1`] = `
{
  "byteCode": [
    106,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "int",
    },
  ],
}
`;
